@@ -1,5 +1,8 @@
 2013-06-03  Niibe Yutaka  <gniibe@fsij.org>
 
+	* chopstx.c (chx_spin_lock, chx_spin_unlock): Rename.
+	(chx_cpu_sched_lock, chx_cpu_sched_unlock): New.
+
 	* chopstx.c (chx_exit): Use R8.
 
 2013-05-29  Niibe Yutaka  <gniibe@fsij.org>
